gitops/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
  - name: app
    port: 80
    targetPort: 9696
    protocol: tcp
    appProtocol: http
  selector:
    app: prowlarr
