gitops/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  parentRefs:
  - name: main
    namespace: cilium-gateway
    sectionName: https-prowlarr
  hostnames:
  - prowlarr.sync.lt
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prowlarr
      port: 80
