gitops/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.sync.lt/_oauth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.sync.lt/_oauth/start?rd=$escaped_request_uri"
spec:
  tls:
  - hosts:
    - prowlarr.sync.lt
    secretName: prowlarr-letsencrypt
  rules:
  - host: prowlarr.sync.lt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              name: app
